--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
 
 .main {
     margin: auto;
-    min-width: 500px;
+    min-width: 900px;
     width: 50vw;
     align-self: center;
     text-align: center;
     padding: 20px;
     background-color: #ff2aa67a;
-    height: 100vh;
+    min-height: 100vh;
     text-shadow: 0px 0px 6px #ffffffff;
 }
